Revert "perf: grant multiple entry points to utils and reduce bundle size on its import"
This reverts commit 403a1943b3f95bc1e43c127a9da90b51b11ea8de.

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,13 +20,7 @@
   },
   "files": [
     "dist",
-    "call-all",
-    "get-id",
-    "keyboard",
-    "merge-refs",
-    "polymorphic",
-    "use-focus-lock",
-    "use-portal",
+    "lib",
     "README.md"
   ],
   "publishConfig": {
@@ -39,17 +33,5 @@
   "bugs": {
     "url": "https://github.com/watife/dorai-ui/issues"
   },
-  "homepage": "https://github.com/watife/dorai-ui#readme",
-  "preconstruct": {
-    "entrypoints": [
-      "index.ts",
-      "call-all.ts",
-      "get-id.ts",
-      "keyboard.ts",
-      "merge-refs.ts",
-      "polymorphic.ts",
-      "use-focus-lock.ts",
-      "use-portal.ts"
-    ]
-  }
+  "homepage": "https://github.com/watife/dorai-ui#readme"
 }
