--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,11 +34,9 @@
     "@dorai-ui/alert": "^0.3.6",
     "@dorai-ui/alert-dialog": "^0.3.5",
     "@dorai-ui/modal": "^1.3.5",
-    "@dorai-ui/portal": "^1.2.4",
     "@dorai-ui/radio-group": "^1.2.5",
     "@dorai-ui/switch": "^3.1.5",
-    "@dorai-ui/tabs": "^2.2.5",
-    "@dorai-ui/utils": "^1.2.4"
+    "@dorai-ui/tabs": "^2.2.5"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
