--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "auto": "^10.32.5",
@@ -67,8 +67,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
