--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
