--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -27,7 +27,8 @@
     "url": "git+https://github.com/watife/dorai-ui.git"
   },
   "dependencies": {
-    "@dorai-ui/utils": "^2.2.0"
+    "@dorai-ui/utils": "^2.2.0",
+    "@dorai-ui/portal": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
