--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -23,5 +23,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1"
   }
 }
