--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "yarn build:packages",
     "build:packages": "preconstruct build",
-    "lint": "eslint .",
+    "lint": "eslint ./packages",
     "test": "jest",
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
@@ -46,7 +46,7 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.8.1",
     "auto": "^10.32.5",
     "babel-jest": "^27.4.5",
